# chat-cabinet

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  server.js  vite.config.js
docs/: format.md
public/: app.js  index.html  style.css
public/js/: activity-bar.js  api.js  detail-panel.js  export.js  menubar.js  sidebar.js  sources.js  tabs.js  tag-api.js  utils.js
public/js/renderers/: blocks.js  claude.js  codex.js  cursor.js  unified.js  vscode-chat.js  vscode-copilot.js
server/: db.js  sessions.js  storage.js  tags.js  utils.js
server/convert/: claude.js  codex.js  cursor.js  lmstudio.js  vscode-chat.js  vscode-copilot.js
server/sources/: claude.js  codex.js  cursor.js  lmstudio.js  vscode-chat.js  vscode-copilot.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: style.css
src/components/conversation/: ConversationView.vue  MessageBlock.vue  StatusEvent.vue  ThinkingBlock.vue  ToolCallBlock.vue
src/components/detail/: DetailMetadata.vue  DetailPanel.vue  DetailTags.vue  ExportSection.vue  RedactionSection.vue  TagInput.vue
src/components/editor/: EditorArea.vue  TabItem.vue  WelcomeTab.vue
src/components/layout/: ActivityBar.vue  MenuBar.vue  StatusBar.vue
src/components/sidebar/: ModelChips.vue  SessionItem.vue  (+5 more)
src/lib/: api-base.js  api.js  export.js  format.js  import.js  markdown.js  redact.js  sources.js  tag-api.js
src/stores/: sessions.js  tabs.js  tags.js  ui.js
