[package]
name = "chat-cabinet"
version = "0.3.2"
description = "Browse and view local AI coding assistant session logs"
edition = "2021"

[lib]
name = "chat_cabinet_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
